--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -1,11 +1,13 @@
 
 <!--
+Paper
+
 1a) start by writing up Bayes ordinal CPM for continuous outcome (i.e. extensions to prior spec to deal with large # of intercepts). 
 
 (I think the main modification needed for this extension will be a hierarchical structure (hyperparameter) on the Dirichlet prior concentration parameters. NO, scratch this for now)
 
 -> Use model with dirichlet and concentration alpha=1/n  (should n be # obs or # unique obs)
-also try:
+also tried:
 alpha=0 (NO! stan_polr and ord_mod1 don't work w/ improper alpha=0 conc. param)
 alpha=1/2 (I think this is multinomial Jeffrey's prior)
 alpha=1
@@ -18,30 +20,46 @@ lower priority -> 1b) figure out why hardcoded stan model doesn't match stan_pol
 
 1c) simulations comparing Bayes CPM to NPMLE (maybe not in paper, but need to verify models are similar)
 
-1d)  simulations comparing Bayes CPM to Bayesian nonparametric (BNP) model
+1d) simulations comparing Bayes CPM to Bayesian nonparametric (BNP) model
 
-2a) mixture link model (maybe, depends on whether it's truly needed or improves model)
+1e) Case study with HIV data
+
+For next paper - extensions
+
+2a) Non-proportional odds. extend to weighted PPO vs. NPO type model (McKinley), except using continuous data and mixture links. [from Frank] consider adding a summarization of evidence for the candidate link functions, e.g., posterior probability that the model has a logit link.  And develop ways to summarize exposure/treatment effects in these mixtures of models, e.g. covariate-specific estimates of both odds ratios and risk differences, plus perhaps hazard ratio.
+
+2b) mixture link model (maybe, depends on whether it's truly needed or improves model)
 --finite mixture and BNP mixture over, e.g. normals
 -- see brms mixture() and BDA3
 
-2b) Extend to nonlinear model - try something simple like Emax
+2c) Extend to nonlinear model - try something simple like Emax
 -- see https://cran.r-project.org/web/packages/brms/vignettes/brms_nonlinear.html
 -- see http://mc-stan.org/rstanarm/articles/glmer.html
 -- see https://mc-stan.org/rstanarm/reference/stan_nlmer.html
 
-2c) Extend to mixed effects CPMs - nonlinear mixed effects model for Bayesian PK/PD
+2d) Extend to mixed effects CPMs - nonlinear mixed effects model for Bayesian PK/PD
 
 TO DO
 - Clean up section describing basic Bayesian ordinal model
 
-- Write section on extension to continuous, nail down 'proof' related to priors for intercepts/heuristic argument
+- Write section on extension to continuous, nail down 'proof' related to priors for intercepts/heuristic argument?
 -- verify that NPMLE likelihood and my likelihood are the same
 
-- clean up functions to get CDF, Mean, Quantile and Exceedance from Stan output
---use roxygen function notation similar to 'Copula modeling with R'
+-->
 
-- write code for basic simulations
--- see Yuqi and Qi papers for scenarios, others
+<!--
+R package
+- add formula interface
+- automatic centering of predictors (see brms and rstanrm which both do this)
+- update CDF, Mean, Quantile to accept list like rms::contrast rather than newdata data.frame to facilitate comparisons
+- figure out Stan issue with non-symmetric link function 
+- clean up functions to get CDF, Mean, Quantile and Exceedance from Stan output 
+- add vignette using all examples from orm() documentation
+- verify priors are correct (Jacobian for induced dirichlet? See Betancourt ordinal regression blog)
+--use roxygen function notation similar to 'Copula modeling with R' - DONE
+
+- code for basic simulations
+-- extend to more iterations or other scenarios (see Yuqi and Qi papers?) 
 -- make sure model is working well in basic scenario; compare to NPMLE
 using Bias, coverage, other statistics?
 
@@ -50,32 +68,26 @@ using Bias, coverage, other statistics?
 https://cran.r-project.org/web/packages/BNSP/index.html
 https://www.stats.ox.ac.uk/~teh/research/npbayes/Teh2010a.pdf
 
-- switch CPM models to OpenBUGs??
+lower priority -> implement CPM models in OpenBUGS??
 -- see http://www.omori.e.u-tokyo.ac.jp/WinBUGS/index.htm ex 14, 15, maybe 16
 -- see https://gist.github.com/bartneck/038fae866e10641b8121679cd02db52e
 -- see http://www.openbugs.net/Examples/Inhalers.html
 
-
-- extend simulation code to compare Bayes CPM to BNP
-
-- write code for mixed effects model
+lower priority -> write code for mixed effects model
 -- see Sorensen et al 2016 paper and STAN for linear mixed models at https://people.bath.ac.uk/jjf23/stan/
 
-- write code for nonlinear model
+lower priority -> write code for nonlinear model
 -- see stan_nlmer and vignette
 -- see vignette("brms_nonlinear")
 -- https://discourse.mc-stan.org/t/hierarchical-nonlinear-regression/4382/12
 -- https://mattstats.wordpress.com/2017/06/12/fitting-nonlinear-functions-in-stan/
 
-- write nonlinear mixed effects model
+lower priority -> write nonlinear mixed effects model
 --see links in above todo item
 
-lower priority issues:
+other lower priority issues/future extensions:
 
 - consider alternate parameterization delta_1=log(gamma_1); delta_j=log(gamma_j-gamma_{j-1}) from Albert & Chib 1997 or just gamma_j-gamma_{j-1}
-
-
-* extend to weighted PPO vs. NPO type model (McKinley), except using continuous data and mixture links. [from Frank] consider adding a summarization of evidence for the candidate link functions, e.g., posterior probability that the model has a logit link.  And develop ways to summarize exposure/treatment effects in these mixtures of models, e.g. covariate-specific estimates of both odds ratios and risk differences, plus perhaps hazard ratio.
 
 * repeated measures/longitudinal with PPO vs. NPO -- with a eye to applying these models for repeated measures ordinal data with censoring and a terminating event (e.g. ischemia QOL & death). The first steps for this part are determining what sort of monotonic censoring patterns/restrictions can be handled and how to correctly account for variance of estimates. Exploration of the relationship between this model formulation and a multistate model with censoring and an absorbing state could be relevant  <-- might need to move this to another paper??
 
@@ -87,13 +99,22 @@ lower priority issues:
 
 <!-- ## Background -->
 
-[Introduction] - 
-Models for ordinal outcomes (ref) and extensions of these models using the Bayesian paradigm have been discussed extensively in the literature (ref).
+Models for ordinal outcomes and extensions of these models using the Bayesian paradigm have been discussed extensively in the literature. 
 
-mini lit review for ordinal models and summarizing results of previous continuous CPM papers
+<!-- mini lit review for ordinal models and summarizing results of previous continuous CPM papers -->
 
-what did we do? - Bayes CPM for continuous, compare to BNP, extend to nonlinear & mixed effects  
-why did we do it? - flexibility for outcome mods, bayesian inf
+<!-- traditional models -->
+McCullagh and Nelder (other early ref)for frequentist ordinal models.
+
+<!-- Bayesian models -->
+Under the Bayesian paradigm [name] describe the use of ... Albert and Chib [@albert_bayesian_1997], Johnson and Albert [@johnson_ordinal_1999], Congdon [@congdon_bayesian_2005], Others??
+
+<!--freq continuous CPM -->
+Harrell [@harrell_regression_2015] and Liu [@liu_modeling_2017] describe how non-parametric maximum likelihood (NPMLE) estimation can be used for continuous outcomes under the CPM modeling framework. A key insight for these models is that continuous data can also be viewed as ordinal categorical data. CPMs for continuous outcomes have several advanatages including direct modeling of the full conditional cumulative distribution function, invariance of regression coefficient estimates to monotonic outcome transformations, and ability to handle mixed continuous/discrete outcomes such as those that arise with a lower or upper limits of detection.
+
+<!-- what did we do? --> 
+In this paper, we develop Bayesian CPMs for continuous (and mixed?) outcomes. Bayesian CPMs inherit many of the properties of CPMs estimated using NPMLE and also have additional advantages including interpretation using posterior probbilities, andand exact inference (within simulation error) when the log-likelihood is not well-approximated by a quadratic function (ability to incorporate prior information if available, extensions to hierarchical, mixture models). Through simulations, we explore characteristics of these models and make comparisons to CPM estimates using NPMLE and Bayesian nonparametric (BNP) regression, another popular approach for flexibly modeling outcomes.
+Finally, we present a case study involving HIV biomarker data which involves skewed outcomes censored at a lower limit of detection.
 
 # Methods
 
@@ -314,7 +335,7 @@ nonlinear - use Emax model
 
 ## Case Study
 
-Use Glycohemoglobin in diabetes ex. from RMS with candidate models
+Use HIV data from Dr. Koethe. Describe background, data and modeling approach
 
 
 # Results
